포트폴리오 서브 페이지 썸네일 및 내용 추가

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 
   <script src="./js/jquery-3.7.0.min.js"></script>
+  <script src="https://unpkg.com/lenis@1.1.4/dist/lenis.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-transform/2.0.0/jquery.transform.min.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
   <script src="./js/swiper-bundle.min.js"></script>
@@ -413,24 +414,23 @@
                                 <strong>COEX Aquarium</strong>
                               </div>
                               <div class="project-tag-list">
-                                <span class="tag">반응형</span>
                                 <span class="tag">리디자인</span>
                                 <span class="tag">1인 프로젝트</span>
                               </div>
                               <div class="project-info-detail">
                                 <div>
                                   <strong>PROJECT.</strong>
-                                  <p>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</p>
+                                  <p>코엑스 아쿠아리움 : 리디자인</p>
                                 </div>
                                 <div>
                                   <strong>PERIOD.</strong>
-                                  <p>2024. 03. 24 - 2024. 05. 28</p>
+                                  <p>2024. 02. 24 - 2024. 03. 28</p>
                                 </div>
                                 <div>
                                   <strong>TOOL.</strong>
                                   <ul>
                                     <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
-                                    <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
+                                    <li><span class="ico-vscode"><i class="hidden">Visual Studio Code</i></span></li>
                                     <li><span class="ico-photoshop"><i class="hidden">Photoshop</i></span></li>
                                   </ul>
                                 </div>
@@ -450,18 +450,20 @@
                                 <strong>Portfolio Site</strong>
                               </div>
                               <div class="project-tag-list">
-                                <span class="tag">반응형</span>
-                                <span class="tag">리디자인</span>
+                                <span class="tag">포트폴리오</span>
+                                <span class="tag">기획</span>
+                                <span class="tag">디자인</span>
+                                <span class="tag">코딩</span>
                                 <span class="tag">1인 프로젝트</span>
                               </div>
                               <div class="project-info-detail">
                                 <div>
                                   <strong>PROJECT.</strong>
-                                  <p>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</p>
+                                  <p>Pine is Fine : 포트폴리오 사이트 제작</p>
                                 </div>
                                 <div>
                                   <strong>PERIOD.</strong>
-                                  <p>2024. 03. 24 - 2024. 05. 28</p>
+                                  <p>2024. 06. 01 - 2024. 06. 28</p>
                                 </div>
                                 <div>
                                   <strong>TOOL.</strong>
@@ -469,6 +471,7 @@
                                     <li><span class="ico-figma"><i class="hidden">Figma</i></span></li>
                                     <li><span class="ico-illustrator"><i class="hidden">Illustrator</i></span></li>
                                     <li><span class="ico-photoshop"><i class="hidden">Photoshop</i></span></li>
+                                    <li><span class="ico-vscode"><i class="hidden">Visual Studio Code</i></span></li>
                                   </ul>
                                 </div>
                               </div>
@@ -570,16 +573,16 @@
                           </a>
                         </div>
                         <div class="swiper-slide">
-                          <a href="#">
+                          <a href="./project-con/3-coex-aquarium.html" target="_blank">
                             <figure>
-                              <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                              <img src="./img/project-thumb-03.png" alt="Coex Aquarium">
                             </figure>
                           </a>
                         </div>
                         <div class="swiper-slide">
-                          <a href="#">
+                          <a href="./project-con/4-portfolio-site.html" target="_blank">
                             <figure>
-                              <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                              <img src="./img/project-thumb-04.png" alt="Portfolio-Site">
                             </figure>
                           </a>
                         </div>
