--- a/project-con/2-melody-mangroove.html
+++ b/project-con/2-melody-mangroove.html
@@ -17,18 +17,24 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-transform/2.0.0/jquery.transform.min.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
   <script src="../js/swiper-bundle.min.js"></script>
-  <script src="../js/aos.js"></script>
+  <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-  <script src="https://unpkg.com/@barba/core"></script>
   <script src="../js/lottie.min.js"></script>
-
-  <!-- <script src="./js/ani-script.js"></script> -->
-  <script src="../js/script.js"></script>
+  <script src="../js/sub-script.js"></script>
+  <!-- <script src="../js/script.js"></script> -->
 </head>
 
 <body>
+  <div class="loading">
+    <div class="loading-wrap">
+      <span><i class="hidden">로고</i></span>
+      <div class="progress-wrap">
+        <div class="progress-bar"></div>
+      </div>
+    </div>
+  </div>
+
   <div class="total-wrap">
     <div class="wrap">
       <!-- s : header -->
@@ -89,7 +95,7 @@
           </section>
           <section class="processpage">
             <figure>
-              <img src="../project-img/02-processpage.png" alt="Melody-mangroove 프로세스 페이지">
+              <img src="../project-img/02-processpage.png" alt="">
             </figure>
           </section>
         </main>
@@ -98,16 +104,7 @@
   </div>
 
   <button type="button" class="btn-top sub-top"><i class="hidden">TOP</i></button>
-  <script>
-    $(function () {
-      // gsap.set('.processpage figure img', { autoAlpha: 0 })
-      $(window).on('load', () => {
-        const projectTL = gsap.timeline();
-        projectTL.from('.main-wrap', { autoAlpha: 0, duration: 2, ease: "power4.inOut" })
-        projectTL.from('.main-wrap', { yPercent: 100, duration: 1.5, ease: "power4.inOut" }, '<')
-      })
-    })
-  </script>
+
 
 </body>
 
