--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                   <li>
                     <!-- 카드이미지 -->
                     <figure>
-                      <img src="" alt="">
+                      <img src="./img/card1.svg" alt="">
                     </figure>
                     <!-- 카드 호버시 나오는 텍스트 -->
                     <div class="card-detail">
@@ -276,30 +276,31 @@
                   <li>
                     <!-- 카드이미지 -->
                     <figure>
-                      <img src="" alt="">
+                      <img src="./img/card2-1.svg" alt="">
                     </figure>
                     <!-- 카드 호버시 나오는 텍스트 -->
                     <div class="card-detail">
                       <div class="inner">
-                        <strong>Title</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sint perspiciatis
-                          exercitationem
-                          repellat impedit soluta minima eum, facilis nam quo!</p>
+                        <strong>여러 방향을 <br>
+                          바라보는 디자이너</strong>
+                        <p>소나무의 솔잎들이 사방을 보며 뻗어 있듯이, 저는 다양한 관점에서 프로젝트를 바라보고, 꼼꼼하게 분석합니다. 이를 바탕으로 사용자의 경험을 고려한 서비스를 구현하고자
+                          하는 디자이너입니다.
+                        </p>
                       </div>
                     </div>
                   </li>
                   <li>
                     <!-- 카드이미지 -->
                     <figure>
-                      <img src="" alt="">
+                      <img src="./img/card3.svg" alt="카드3 이미지">
                     </figure>
                     <!-- 카드 호버시 나오는 텍스트 -->
                     <div class="card-detail">
                       <div class="inner">
-                        <strong>Title</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sint perspiciatis
-                          exercitationem
-                          repellat impedit soluta minima eum, facilis nam quo!</p>
+                        <strong>어느 환경에서도 <br>
+                          유연하게 적응하는 디자이너</strong>
+                        <p>소나무처럼 낮과 밤, 계절이 변해도 묵묵히 주어진 일에 최선을 다합니다. 또한, 저는 낯설고 변화가 많은 환경에서도 유연하게 적응할 수 있는 디자이너입니다.
+                        </p>
                       </div>
                     </div>
                   </li>
